--- a/report/Conclusions/conclusions.tex
+++ b/report/Conclusions/conclusions.tex
@@ -1,5 +1,5 @@
 \def\baselinestretch{1}
-\chapter{Conclusions}
+\chapter{Conclusion}
 \ifpdf
     \graphicspath{{Conclusions/ConclusionsFigs/PNG/}{Conclusions/ConclusionsFigs/PDF/}{Conclusions/ConclusionsFigs/}}
 \else
@@ -7,6 +7,15 @@
 \fi
 
 \def\baselinestretch{1.66}
+
+
+\section{Summary of Achievements}
+
+\section{Applications}
+
+\section{Future Work}
+
+
 
 Future:
 \begin{itemize}
