--- a/report/report.tex
+++ b/report/report.tex
@@ -130,7 +130,7 @@
 \include{Implementation/implementation}
 \include{Management/management}
 \include{Evaluation/evaluation}
-%\include{Conclusions/conclusions}
+\include{Conclusions/conclusions}
 
 \backmatter % book mode only
 \appendix
